--- a/public/stylesheets/sass/abstracts/_variables.scss
+++ b/public/stylesheets/sass/abstracts/_variables.scss
@@ -8,16 +8,15 @@ $color-grey-light-1: #f9f7f6;
 $color-grey-light-2: rgba(243, 240, 240, 0.863);
 
 $color-grey-dark-1: rgba(92, 80, 67, 0.562);
-$color-grey-dark-2: rgb(83, 72, 60);
+$color-grey-dark-2: rgb(37, 36, 34);
 
 // FONT VARIABLES
 $font-primary: 'Nunito', sans-serif;
 $font-display: 'Josefin Sans', sans-serif;
 
 // RESPONSIVE BREAKPOINTS
-$bp-largest: 75em;   // 1200px
-$bp-large: 62.5em;   // 1000px
-$bp-medium: 50em;    // 800px;
-$bp-small: 37.5em;    // 600px;
+$bp-largest: 75em; // 1200px
+$bp-large: 62.5em; // 1000px
+$bp-medium: 50em; // 800px;
+$bp-small: 37.5em; // 600px;
 $bp-smallest: 28.125em; // 450px;
-
